--- a/app/views/project_completions/mpc_damperrepair.html.erb
+++ b/app/views/project_completions/mpc_damperrepair.html.erb
@@ -34,6 +34,7 @@
               <th>Project Start Date(m_project_start_date)</th>
               <th>Primary Contact Name(m_primary_contact_name)</th>
               <th>Phone#(m_phone)</th>
+              <th>Customer Name(m_customer_name)</th>
               <th>Printed Report(m_printed_report)</th>
               <th>Autocad(m_autocad)</th>
               <th>Total Dampers Repair(m_total_no_of_dampers_repaired)</th>
@@ -64,6 +65,7 @@
                 <td><%= dr.m_project_start_date.localtime.strftime(I18n.t('time.formats.mdY')) %></td>
                 <td><%= dr.m_primary_contact_name %></td>
                 <td><%= dr.m_phone %></td>
+                <td><%= dr.m_customer_name %></td>
                 <td><%= dr.m_printed_report %></td>
                 <td><%= dr.m_autocad %></td>
                 <td><%= dr.m_total_no_of_dampers_repaired %></td>
